fix: correct organic shape spacing

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -5,7 +5,6 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    scroll-behavior: smooth;
 }
 
 p {
@@ -33,6 +32,15 @@ footer{
     display: flex;
     align-items: center;
     justify-content: center;
+    scroll-snap-align: bottom;
+}
+
+.snap-scroll {
+    padding: 0;
+    margin: 0;
+    width: 100%;
+    height: 100vh;
+    scroll-snap-type: y mandatory; /* Essa é a propriedade que faz o scroll */
 }
 
 .language {
@@ -94,6 +102,7 @@ footer{
     flex-direction: row;
     justify-content: center;
     height: 1024px;
+    scroll-snap-align: center;
 }
 
 .block{
@@ -165,12 +174,15 @@ footer{
 
 
 .project-content{
-    /* background-image: url("../images/bg_project_light.jpg"); */
     background-color: #8A5757;
     height: 1024px;
     left: 0;
     right: 0;
     padding-top: 100px;
+    background-image: url(../svg/organic-shape1.svg);
+    background-position: left -30px bottom -35px;
+    background-repeat: no-repeat;
+    scroll-snap-align: center;
 }
 
 .project-title{
@@ -246,6 +258,11 @@ footer{
 
 .about-me{
     padding-left: 150px;
+    background-image: url(../svg/organic-shape2.svg);
+    background-position: right -30px bottom -35px;
+    background-repeat: no-repeat;
+    background-size: 1050px 1050px;
+    scroll-snap-align: center;
 }
 
 .about-me-title{
@@ -261,7 +278,6 @@ footer{
 
 .about-me-content{
     /* background-image: url("../images/bg_aboutme_light.jpg"); */
-    background-color: #EABABA;
     /* width: 100%; */
     height: 1024px;
     display: flex;
